<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com._4point.aem.docservices</groupId>
		<artifactId>rest-services</artifactId>
		<version>0.0.4-SNAPSHOT</version>
	</parent>
	<artifactId>rest-services.it.tests</artifactId>
	<name>Integration Tests</name>
	<description>Integration Tests to test the rest-services directly.</description>

	<!--
	|   This project can be built with the following command line:
	|   mvn clean test
	| 
	|   These are integration tests so, in order for these tests to run, there needs to be a running AEM instance locally on 
	|   port 4502  (or non-locally if you're willing to modify the TEST_MACHINE and TEST_MACHINE_PORT values in TestUtils.java).
	|
	|   The testing instance must have the SampleForm.xdp uploaded into a directory named sample-forms that resides directly under the
	|   FormsAndDocuments within the CRX repository.  Without this, all the crx-related tests will fail.
	|
	|   The testing instance must have the sample0002test.zip and sampleForm_JSON.zip packages uploaded amd installed.
	|   These packages contain adaptive forms that reside directly under theFormsAndDocuments called sample0002test and sample-json-adaptive-form-1.  
	|   Without these forms, all the adaptive forms tests will fail.
	|
	|	Protected mode must be turned off, per this: https://experienceleague.adobe.com/docs/experience-manager-65/forms/html5-forms/preview-xdp-forms-html.html?lang=en#disable-protected-mode
	|
	|   Also, the testing instance must have a ReaderExtensions credential installed under admin using an alias of "recred" in order for
	|   all the SecureDocument/testReaderExtendPDF tests to pass.
	 -->

	<properties>
		<!--  AEM may be running in Java 8, so compile for that until it's no longer supported. -->
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
	</properties>

	<dependencies>
<!--		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-multipart</artifactId>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
		</dependency>
-->
        <dependency>
            <groupId>com._4point.aem</groupId>
            <artifactId>fluentforms.core</artifactId>
        </dependency>
        <dependency>
            <groupId>com._4point.aem.docservices</groupId>
            <artifactId>rest-services.client</artifactId>
        </dependency>
		<dependency>
			<groupId>com._4point.aem.docservices.rest-services</groupId>
			<artifactId>rest-services.jersey-client</artifactId>
		</dependency>
		<!-- Testing -->
		<dependency>	<!-- PDF Library for examining PDFs we generate -->
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.jcabi</groupId>
			<artifactId>jcabi-xml</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.4point.aem</groupId>
			<artifactId>aem-package-manager-api</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>